--- a/sfml_invaders/sfml_invaders.vcxproj
+++ b/sfml_invaders/sfml_invaders.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Collidable.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
+    <ClCompile Include="Invader.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Invader.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SpaceInvaders.h" />
